# Agent-Layer

./: .env.example  .gitignore  .npmignore  8004.md  AGENT_RELEASES.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASING.md  VERSIONING.md  WELCOME_BONUS_ONBOARDING_PLAN.md  bot_mvp.md  install-from-github.sh  package.json  requirements.txt  setup.sh  skills-lock.json
agent-wallet/: .env.example  AGENTS.md  AGENT_WALLET_PLAN.md  AUTONOMOUS_EXECUTION_PLAN.md  AUTONOMOUS_EXECUTION_PRINCIPLES.md  README.md  UPGRADE_COMPATIBILITY.md  X402_BUYER_INTEGRATION_PLAN.md  openclaw.plugin.json  pyproject.toml  requirements.txt
agent-wallet/agent_wallet/: __init__.py  approval.py  autonomous_permissions.py  autonomous_policy.py  autonomous_session.py  boot_key_migration.py  boot_key_recovery.py  bootstrap.py  btc_user_wallets.py  config.py  encrypted_storage.py  evm_user_wallets.py  exceptions.py  file_ops.py  http_client.py  keystore.py  models.py  nonce_registry.py  openclaw_adapter.py  openclaw_cli.py  openclaw_runtime.py  plugin_bundle.py  sealed_keys.py  solana_stake.py  solana_tx.py  spending_limits.py  telemetry.py  transaction_policy.py  update_check.py  user_wallets.py  validation.py
agent-wallet/examples/: bootstrap_wallet.py  openclaw_runtime_onboarding.py  openclaw_user_wallet_example.py  openclaw_wallet_adapter_example.py
mcp-server/: .env.example  Dockerfile  PROJECT_OVERVIEW.md  README.md  cache.py  config.py  docker-compose.yml  exceptions.py  http_client.py  models.py  pyproject.toml  rate_limiter.py  server.py  validation.py
mcp-server/providers/: rpc.py  (+13 more)
(+454 files in other folders)
